--- a/manifest.json
+++ b/manifest.json
@@ -8,6 +8,6 @@
   "content_scripts": [{
     "css": ["google_style.css"],
 //    "js": ["content.js"],
-    "matches": ["https://*.google.com/*"]
+    "matches": ["https://www.google.com/*"]
   }]
 }
