--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,7 @@
 
   "content_scripts": [{
     "css": ["google_style.css"],
-//    "js": ["content.js"],
+    /*"js": ["content.js"],*/
     "matches": ["https://www.google.com/*"]
   }]
 }
